# nwpu-gamedev-2025-server

./: .gitmodules  CMakeLists.txt  README.md  cloc-exclude.txt  n  n.pub  settings.toml  服务端架构和基本设计.md  游戏设计文档.md
build-release/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
build-release/vendors/entt/: Makefile  cmake_install.cmake
build-release/vendors/flatbuffers/: CTestTestfile.cmake  Makefile  cmake_install.cmake  flatsamplebfbs  flatsamplebinary  flatsampletext  flattests
build-release/vendors/flatbuffers/tests/: alignment_test_generated.h  arrays_test_generated.h
build-release/vendors/nlohmann/: Makefile  cmake_install.cmake
build-release/vendors/spdlog/: Makefile  cmake_install.cmake
build-release/vendors/tinygltf/: Makefile  cmake_install.cmake  loader_example
build-release/vendors/tomlplusplus/: Makefile  cmake_install.cmake
config/: config.cpp  config.h  weapons.json
include/: server.h
include/core/: EconomySystem.h  FireSystem.h  GameContext.h  HandlePacket.h  MoveSystem.h  PurchaseSystem.h
include/entity/: PlantZone.h  PlayerState.h  Weapon.h
include/game/: CombatEngine.h  Economy.h  PlantSite.h  PlayerState.h  PlayerTeam.h  RoundState.h  ServerState.h  TickContext.h
include/game/dataset/: InputDataPackage.h  PlayerState.h
include/math/: common.h  glm_include.h
include/network/: NetChannel.h  NetPacket.h  NetWorkService.h  PackageQueue.h  PacketQueue.h  TickContext.h  common.h
include/physics/: EvalPhysDamage.h  InputIntent.h  PhysicsCharacterController.h  PhysicsEnginee.h  PhysicsMapController.h
include/protocol/: Events_generated.h  Main_generated.h  PlayerInfo_generated.h  PlayerTeam_generated.h  PlayerUpdate_generated.h  Weapon_generated.h  receiveGamingPacket_generated.h
include/state/: GameState.h  MatchController.h  MatchEndState.h  RoomContext.h  RoundPlayerController.h  RoundState.h  WaitState.h  WarmupState.h
include/stats/: ComputeStats.h
include/test/: network.h
include/util/: RingQueue.h  SpawnSets.h  generateUUID.h  getTime.h
include/util/math/: common.h
include/util/time/: getTime.h
schemas/: .fbs_cache.json  compile_fbs.py  receiveConnectionPacket.fbs  receiveGamingPacket.fbs  respondGamingPacket.fbs
shared/include/: TomlImpl.hpp
shared/include/Core/: Common.hpp  FileReader.hpp
shared/src/Core/: FileReader.cpp  FileWriter.cpp  Param.cpp
shared/src/Physics/: GltfColliderFactory.cpp
src/: DecodePacket.cpp  EncodePacket.cpp  ManagePacket.cpp  PackageQueue.cpp  _include.cpp  main.cpp  server.cpp
src/core/: GameContext.cpp  HandlePacket.cpp  Purchase.cpp
src/entity/: Weapon.cpp
src/example/: network.cpp
src/network/: NetWorkService.cpp  common.cpp
src/physics/: OneTickPacketProcessing.cpp  PhysRaycastHit.cpp  PhysicsCharacterController.cpp  PhysicsEnginee.cpp  PhysicsMapController.cpp  Prediction.cpp
src/state/: C4State.cpp  GameEndState.cpp  MatchController.cpp  MatchEndState.cpp  RoomContext.cpp  RoundState.cpp  WaitState.cpp  WarmupState.cpp
src/stats/: ComputeStats.cpp
src/test/: testQueue.cpp
src/util/: getTime.cpp
vendors/glm/glm/simd/: common.h
